# scotty-example

./: README.md  scotty-example.cabal
src/: App.hs  Config.hs  Db.hs  Types.hs
test/: Main.hs
