name:                scotty-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Dokuro-YH/scotty-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          shimmly@live.cn
copyright:           2017 Author Dokuro-YH
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Config
                     , App
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , transformers
                     , data-default
                     , text
                     , resource-pool
                     , mysql-simple
                     , http-types
                     , scotty
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable scotty-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty-example
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scotty-example
