name:                scotty-example
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Dokuro-YH/scotty-example#readme
license:             BSD3
license-file:        LICENSE
author:              Yanhai
maintainer:          shimmly@live.cn
copyright:           2017 Author Dokuro-YH
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Config
                     , Db
                     , App
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , transformers
                     , data-default
                     , text
                     , resource-pool
                     , mysql-simple
                     , http-types
                     , scotty
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty-example
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , scotty-example
                     , aeson
                     , hspec
                     , resource-pool
                     , mysql-simple
                     , mtl
                     , scotty
                     , wai
                     , wai-extra
                     , http-types
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Dokuro-YH/scotty-example
